--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,10 @@
 name=ConsentiumStarterKit
 version=0.0.1
 author=Consentium IoT
-maintainer=Consentium <consentiuminc.in@gmail.com>
+maintainer=Consentium <official@consentiumiot.com>
 sentence=Consentium Starter kit.
 paragraph=This library enables the starter kit sensors. 
 category=Data Processing
-url=https://docs.consentiuminc.online/
+url=https://docs.consentiumiot.com/
 architectures=*
+depends=DHT_sensor_library
