DHT sensor library issue

--- a/library.properties
+++ b/library.properties
@@ -7,4 +7,4 @@ paragraph=This library enables the starter kit sensors.
 category=Data Processing
 url=https://docs.consentiumiot.com/
 architectures=*
-depends=DHT_sensor_library
+depends=DHT sensor library
